新增Standard，修复了swagger参数错误
